Bug 286523 - KIntSpinBox changing value on pressing Tab
Summary: KIntSpinBox changing value on pressing Tab
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-13 19:50 UTC by Matthias Fuchs
Modified: 2011-11-14 11:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Fuchs 2011-11-13 19:50:15 UTC
Version:           unspecified
OS:                Linux

Specially crafte KIntSpinBox result in ignoring values you entered by keyboard after pressing Tab.

You can easily reproduce this bug with designer, see below:

Reproducible: Didn't try

Steps to Reproduce:
1. Create a KIntSpinBox which has a prefix
2. Create another widget you can jump to via tab
3. Go to preview mode and navigate to the KIntSpinBox
4. Enter a correct value and press TAB

Actual Results:  
Your entered value is overwritten with the default value

Expected Results:  
Your entered value should be kept, as it is for the QSpinBox.
Comment 1 Christoph Feck 2011-11-14 11:21:12 UTC
Git commit 29a0c9945cdb3e406b9ca45a74cdab8227622e81 by Christoph Feck.
Committed on 14/11/2011 at 12:18.
Pushed by cfeck into branch 'KDE/4.7'.

Fix KIntSpinBox not respecting prefix()

Additionally, trim spaces (like in the Qt implementation).

BUG: 286523
FIXED-IN: 4.7.4

M  +4    -1    kdeui/widgets/knuminput.cpp

http://commits.kde.org/kdelibs/29a0c9945cdb3e406b9ca45a74cdab8227622e81