Fix KIntSpinBox not respecting prefix()

Additionally, trim spaces (like in the Qt implementation).

BUG: 286523
FIXED-IN: 4.7.4